--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["barplot", "countplot", "streamlit"]
+  "cSpell.words": [
+    "barplot",
+    "countplot",
+    "matplotlib",
+    "pyplot",
+    "scikit",
+    "seaborn",
+    "sklearn",
+    "streamlit"
+  ]
 }
