--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,13 @@
   "cSpell.words": [
     "barplot",
     "countplot",
+    "dataframe",
+    "googleapis",
     "matplotlib",
     "pyplot",
     "scikit",
     "seaborn",
     "sklearn",
-    "streamlit",
-    "googleapis"
+    "streamlit"
   ]
 }
