--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,13 @@
   "cSpell.words": [
     "barplot",
     "Cardeovascular",
+    "Cascadia",
     "countplot",
     "dataframe",
     "googleapis",
     "matplotlib",
     "pyplot",
+    "Raghu",
     "scikit",
     "seaborn",
     "sklearn",
